--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ Aside:first-child{
     float: left;
     Width: 20%;
     Height: 500px;
+    Margin: 0 10px 0 0;
     Background-color: lightblue;
 }
 
@@ -54,14 +55,15 @@ Aside:last-child{
     float: right;
     Width: 20%;
     Height: 500px;
+    Margin: 0 0 0 10px;
     Background-color: lightblue;
 }
 
 .central{
     float: left;
-    Width: 56%;
+    Width: 56.5%;
     Height: 500px;
-    Margin: 0 20px 0 20px;
+    Margin: 0 10px 0 10px;
     Background-color: lightblue;
 }
 
