--- a/style.css
+++ b/style.css
@@ -9,37 +9,35 @@ Body{
     Background-color: white;
 }
 
+body > *{
+    width: 70%;
+    margin: 20px;
+    margin: auto;
+}
+
 Header{
     Height: 100px;
-    Width: 1200px;
-    Margin: auto;
     Background-color: magenta;
 }
 
-main{
-    Width: 1200px;
-    Margin: auto;
-}
-
-.sezione1{
+.main-top{
     Height: 500px;
     Background-color: rgb(224, 231, 84);
     Margin-top: 20px;
 }
 
-.wrap{
+.main-bot{
     width: 100%;
-    Padding: 20px 0 20px 0;
+    padding: 20px;
     Background-color: rgb(19, 81, 225);
     content: "";
     display: table;
     clear: both;
 }
 
-Nav{ 
-    Height: 65px;
-    Width: 100%;
+h1{ 
     margin-top: 20px;
+    height: 80px;
     Background-color: lightblue;
 }
 
@@ -47,7 +45,7 @@ Aside:first-child{
     float: left;
     Width: 20%;
     Height: 500px;
-    Margin: 0 10px 0 0;
+    margin: 10px;
     Background-color: lightblue;
 }
 
@@ -55,22 +53,20 @@ Aside:last-child{
     float: right;
     Width: 20%;
     Height: 500px;
-    Margin: 0 0 0 10px;
+    margin: 10px;
     Background-color: lightblue;
 }
 
-.central{
+article{
     float: left;
-    Width: 56.5%;
+    Width: 56%;
     Height: 500px;
-    Margin: 0 10px 0 10px;
+    margin: 10px;
     Background-color: lightblue;
 }
 
 Footer{
-    width: 1200px;
     Height: 45px;
-    margin: auto;
     Margin-top: 5px;
     Background-color: purple;
 }
